--- a/style.css
+++ b/style.css
@@ -2,20 +2,68 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 50px 50px 0 50px;
   background-color: #faf9f6;
-  display: flex;
-  flex-direction: column;
   min-height: 95vh;
 }
-.main {
-  flex: 1;
+
+.logo-container {
+  display: block;
+}
+
+.logo {
+  display: inline;
+  color: orange;
+  font-size: 3rem;
 }
 
 h1 {
+  display: inline-block;
   font-size: 5rem;
 }
 
-footer {
-  text-align: right;
-  color: midnightblue;
+.creative-text {
+  color:rgb(90, 90, 218);
 }
+
+.card {
+  display: inline-block;
+  width: 40%;
+}
+
+.left.card{
+  border:4px solid black;
+}
+
+.right.card{
+  border:4px solid black;
+}
+
+img {
+  width: 100%;
+}
+
+
+/* @media (max-width: 680px) {
+  .logo {
+    width: 100px;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+    text-align: center;
+  }
+
+  .card {
+    width: 100%;
+    display: block;
+    margin-bottom: 30px;
+    text-align: justify;
+  }
+
+  .card img {
+    margin-bottom: 10px;
+    width: 100%;
+    display: inline;
+    object-fit: cover;
+  }
+} */
 
